@@ -9,8 +9,11 @@ import com.technofacts.lnf.dto.company.CompanyPolicyDto;
 import com.technofacts.lnf.exception.LnFBadRequestException;
 import com.technofacts.lnf.exception.LnFEntityNotFoundException;
 import com.technofacts.lnf.exception.LnFException;
+import com.technofacts.lnf.service.file.FileService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.java.Log;
+import org.apache.commons.lang3.StringUtils;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
@@ -20,10 +23,7 @@ import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
 import java.io.IOException;
-import java.util.List;
-import java.util.Objects;
-import java.util.UUID;
-import java.util.stream.Collectors;
+import java.util.*;
 
 @Service
 @Transactional
@@ -31,40 +31,77 @@ import java.util.stream.Collectors;
 @Log
 public class CompanyPolicyService {
 
+    @Value("${aws.s3.bucket.enabled}")
+    private boolean awsS3BucketEnabled;
+
+    @Value("${aws.s3.bucket.folderName}")
+    private String folderName;
+
     private final CompanyRepository companyRepository;
+
     private final CompanyPolicyRepository repository;
+
+    private final FileService fileService;
 
     public List<CompanyPolicyDto> findAll() {
         List<CompanyPolicy> entities = repository.findAll();
         return entities.stream().map(CompanyPolicyConverter::toTransportModel)
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<CompanyPolicyDto> findByCompanyId(UUID companyId) {
-        searchForCompany(companyId);
-        List<CompanyPolicy> entities = repository.findByCompanyId(companyId);
-        List<CompanyPolicyDto> companyPolicyDtos = entities.stream()
-                .map(CompanyPolicyConverter::toTransportModel)
-                .filter(Objects::nonNull)
-                .collect(Collectors.toList());
-        companyPolicyDtos.forEach(f -> {
-            String downloadURL = ServletUriComponentsBuilder.fromCurrentContextPath()
-                    .path(String.format("/lnf/company/%s/policies/", companyId))
-                    .path(f.getId().toString())
-                    .toUriString();
-            f.setUrl(downloadURL);
-        });
-        return companyPolicyDtos;
+        if(awsS3BucketEnabled) {
+            String filePath = String.format("%s/%s/%s/", folderName, companyId, "policies");
+            List<String> files = fileService.findFilesInFolder(filePath);
+            List<CompanyPolicyDto> companyPolicyDtos = new ArrayList<>();
+            files.forEach(file -> {
+                String fileName = StringUtils.substringAfterLast(file, "/");
+                String downloadURL = ServletUriComponentsBuilder.fromCurrentContextPath()
+                        .path (String.format ("/lnf/company/%s/policies/%s", companyId, fileName))
+                        .toUriString();
+                CompanyPolicyDto companyPolicyDto = new CompanyPolicyDto();
+                companyPolicyDto.setName(fileName);
+                companyPolicyDto.setUrl(downloadURL);
+                companyPolicyDtos.add(companyPolicyDto);
+            });
+            return companyPolicyDtos;
+        } else {
+            searchForCompany (companyId);
+            List<CompanyPolicy> entities = repository.findByCompanyId (companyId);
+            List<CompanyPolicyDto> companyPolicyDtos = entities.stream ()
+                    .map (CompanyPolicyConverter::toTransportModel)
+                    .filter (Objects::nonNull)
+                    .toList ();
+            companyPolicyDtos.forEach (f -> {
+                String downloadURL = ServletUriComponentsBuilder.fromCurrentContextPath ()
+                        .path (String.format ("/lnf/company/%s/policies/", companyId))
+                        .path (f.getId ().toString ())
+                        .toUriString ();
+                f.setUrl (downloadURL);
+            });
+            return companyPolicyDtos;
+        }
     }
 
-    public ResponseEntity<byte[]> findById(UUID companyId, UUID policyId) {
-        searchForCompany(companyId);
-        CompanyPolicy companyPolicy = searchForPolicy(policyId);
-        return ResponseEntity.ok()
-                .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=\"" + companyPolicy.getName() + "\"")
-                .contentType(MediaType.valueOf(companyPolicy.getContentType()))
-                .body(companyPolicy.getContent());
+    public ResponseEntity<byte[]> findById(UUID companyId, UUID policyId, String fileName) {
+        try {
+            if (awsS3BucketEnabled) {
+                String filePath = String.format("%s/%s/%s/%s", folderName, companyId, "policies", fileName);
+                return fileService.findFileContent (filePath);
+            } else {
+                searchForCompany (companyId);
+                CompanyPolicy companyPolicy = searchForPolicy (policyId);
+                return ResponseEntity.ok ()
+                        .header (HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=\""
+                                + companyPolicy.getName () + "\"")
+                        .contentType (MediaType.valueOf (companyPolicy.getContentType ()))
+                        .body (companyPolicy.getContent ());
+            }
+        } catch (RuntimeException e ) {
+            String errorMessage = String.format ("file not found for Company[%s]", companyId);
+            throw new LnFException (errorMessage, e);
+        }
     }
 
     public void create(UUID companyId, MultipartFile[] policies) {
@@ -73,13 +110,20 @@ public class CompanyPolicyService {
             try {
                 LnFBadRequestException.throwOnCondition(Objects::isNull, policy,
                         String.format("Failed to create Policy for company [%s] with null payload", companyId));
-                CompanyPolicy entity = CompanyPolicyConverter.toEntityModel(policy);
-                entity.setCompany(company);
-                save(entity);
-                log.info(() -> String.format("Policy [%s] for Company[%s] successfully created", policy.getOriginalFilename(), companyId));
-
+                if (awsS3BucketEnabled) {
+                    String folder = String.format("%s/%s/%s/", folderName, companyId, "policies");
+                    String filePath = uploadFile(folder, policy);
+                    log.info("File uploaded successfully to S3 bucket: " + filePath);
+                } else {
+                    CompanyPolicy entity = CompanyPolicyConverter.toEntityModel(policy, false);
+                    entity.setCompany(company);
+                    save(entity);
+                    log.info(() -> String.format("Policy [%s] for Company[%s] successfully created",
+                            policy.getOriginalFilename(), companyId));
+                }
             } catch (RuntimeException | IOException e) {
-                String errorMessage = String.format("Failed to create policy[%s] for company [%s]", companyId, policy.getOriginalFilename());
+                String errorMessage = String.format("Failed to create policy[%s] for company [%s]",
+                        companyId, policy.getOriginalFilename());
                 throw new LnFException(errorMessage, e);
             }
         }
@@ -88,38 +132,51 @@ public class CompanyPolicyService {
     public void update(UUID companyId, UUID fileId, MultipartFile policy) {
         LnFBadRequestException.throwOnCondition(Objects::isNull, policy,
                 String.format("Failed to update policy for company [%s] with null payload", companyId));
-        searchForCompany(companyId);
-        CompanyPolicy entity = searchForPolicy(fileId);
         try {
-            CompanyPolicy updatedEntity = CompanyPolicyConverter.toEntityModel(policy, entity);
-            save(updatedEntity);
+            if (awsS3BucketEnabled) {
+                String folder = String.format("%s/%s/%s/", folderName, companyId, "policies");
+                String filePath = uploadFile(folder, policy);
+                log.info("File uploaded successfully to S3 bucket: " + filePath);
+            } else {
+                searchForCompany(companyId);
+                CompanyPolicy entity = searchForPolicy(fileId);
+                CompanyPolicy updatedEntity = CompanyPolicyConverter.toEntityModel(policy, entity, awsS3BucketEnabled);
+                save(updatedEntity);
+                log.info(() -> String.format("Policy [%s] for Company[%s] successfully updated", fileId, companyId));
+            }
         } catch (RuntimeException | IOException e) {
             String errorMessage = String.format("Failed to update policy[%s] for company [%s]", fileId, companyId);
             throw new LnFException(errorMessage, e);
         }
-        log.info(() -> String.format("Policy [%s] for Company[%s] successfully updated", fileId, companyId));
     }
 
     public void deleteByCompanyId(UUID companyId) {
-        searchForCompany(companyId);
-        List<CompanyPolicy> entities = repository.findByCompanyId(companyId);
+        searchForCompany (companyId);
+        List<CompanyPolicy> entities = repository.findByCompanyId (companyId);
         try {
             repository.deleteAll(entities);
         } catch (RuntimeException e) {
-            String errorMessage = String.format("Failed to delete policies for company [%s]", companyId);
-            throw new LnFException(errorMessage, e);
+            String errorMessage = String.format ("Failed to delete policies for company [%s]", companyId);
+            throw new LnFException (errorMessage, e);
         }
     }
 
-    public void deleteById(UUID companyId, UUID fileId) {
-        searchForCompany(companyId);
-        CompanyPolicy entity = searchForPolicy(fileId);
-        try {
-            repository.delete(entity);
-            log.info(() -> String.format("Policy[%s] for company [%s] successfully deleted", fileId, companyId));
-        } catch (RuntimeException e) {
-            String errorMessage = String.format("Failed to delete Policy[[%s] for company [%s]", fileId, companyId);
-            throw new LnFException(errorMessage);
+    public void deleteById(UUID companyId, UUID fileId , String fileName) {
+        if (awsS3BucketEnabled) {
+            String s3ObjectKey = String.format("%s/%s/%s/%s", folderName, companyId, "policies", fileName);
+            List<String> filePaths = Collections.singletonList(s3ObjectKey);
+            fileService.delete(filePaths);
+            log.info("S3 object deleted for company");
+        } else {
+            searchForCompany (companyId);
+            CompanyPolicy entity = searchForPolicy (fileId);
+            try {
+                repository.delete (entity);
+                log.info (() -> String.format ("Policy[%s] for company [%s] successfully deleted", fileId, companyId));
+            } catch (RuntimeException e) {
+                String errorMessage = String.format ("Failed to delete Policy[[%s] for company [%s]", fileId, companyId);
+                throw new LnFException (errorMessage);
+            }
         }
     }
 
@@ -134,11 +191,18 @@ public class CompanyPolicyService {
 
     private Company searchForCompany(UUID companyId) {
         return companyRepository.findByCompanyId(companyId).
-                orElseThrow(() -> new LnFEntityNotFoundException(String.format("Company with id [%s] does not exist", companyId)));
+                orElseThrow(() -> new LnFEntityNotFoundException(
+                        String.format("Company with id [%s] does not exist", companyId)));
     }
 
     private CompanyPolicy searchForPolicy(UUID fileId) {
         return repository.findById(fileId).
-                orElseThrow(() -> new LnFEntityNotFoundException(String.format("Company policy with id [%s] does not exist", fileId)));
+                orElseThrow(() -> new LnFEntityNotFoundException(
+                        String.format("Company policy with id [%s] does not exist", fileId)));
     }
+
+    private String uploadFile(String folder, MultipartFile file) {
+        return fileService.uploadFile(folder,file);
+    }
+
 }
